Fix most of the broken internal and external links. The majority of the links didn't work because of links of type http://docs.ros.org/api while the correct link has to contain the ros version like http://docs.ros.org/indigo/api

--- a/_themes/sphinx_rtd_theme/layout.html
+++ b/_themes/sphinx_rtd_theme/layout.html
@@ -134,7 +134,7 @@
 
         <div class="header-override">
           <p>
-            <a href="http://moveit.ros.org/research">MoveIt! Website</a><br/>
+            <a href="http://moveit.ros.org">MoveIt! Website</a><br/>
             <a href="http://moveit.ros.org/blog">Blog</a>
           </p>
           <a href="http://moveit.ros.org">
