--- a/_themes/sphinx_rtd_theme/layout.html
+++ b/_themes/sphinx_rtd_theme/layout.html
@@ -149,7 +149,13 @@
 
             <div class="admonition note">
               <p class="first admonition-title">Outdated Documentation</p>
-              <p class="last">This is the old Indigo tutorials, the latest can be found <a href="http://docs.ros.org/kinetic/api/moveit_tutorials/html/">here for Kinetic</a></p>
+              <p class="last">This is the old Indigo tutorials, the latest can be found <a href="http://docs.ros.org/kinetic/api/moveit_tutorials/html/">here for Kinetic</a>.<br />
+                The code used in this tutorial can be found at <a href = "https://github.com/ros-planning/moveit_tutorials">moveit_tutorials repository</a> (see into doc folder). You can also download the source to your computer by:<br />
+                <code>
+                git clone https://github.com/ros-planning/moveit_tutorials && cd moveit_tutorials/doc<br />
+                git checkout indigo-devel<br />
+                </code>
+              </p>
             </div>
 
             {% block body %}{% endblock %}
