--- a/_themes/sphinx_rtd_theme/layout.html
+++ b/_themes/sphinx_rtd_theme/layout.html
@@ -86,7 +86,7 @@
 
     gtag('config', 'UA-108532843-1');
   </script>
-  
+
 </head>
 
 <body class="wy-body-for-nav" role="document">
@@ -156,10 +156,10 @@
           {% include "breadcrumbs.html" %}
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
            <div itemprop="articleBody">
-             <div class="admonition note"> 
-               <p class="first admonition-title">Code Used in this Tutorial Available</p> 
-               <p class="last">Code can be found at <a href = "https://github.com/ros-planning/moveit_tutorials">moveit_tutorials repository</a> in doc folder. Use kinetic-devel branch.</p>
-             </div> 
+             <!-- <div class="admonition note">  -->
+               <!-- <p class="first admonition-title">Code Used in this Tutorial Available</p>  -->
+               <!-- <p class="last">Code can be found at <a href = "https://github.com/ros-planning/moveit_tutorials">moveit_tutorials repository</a> in doc folder. Use kinetic-devel branch.</p> -->
+             <!-- </div>  -->
             {% block body %}{% endblock %}
             {% if display_github %}
             <div class="admonition note">
