Fixing empty link

--- a/_themes/sphinx_rtd_theme/layout.html
+++ b/_themes/sphinx_rtd_theme/layout.html
@@ -98,7 +98,7 @@
       <div class="wy-side-nav-search">
         {% block sidebartitle %}
 
-        <a href="/">
+        <a href="{{ pathto(master_doc) }}">
           <img src="{{ pathto('_static/logo.png', 1) }}"/>
           <span>Planning Framework</span>
         </a>
