--- a/_themes/sphinx_rtd_theme/layout.html
+++ b/_themes/sphinx_rtd_theme/layout.html
@@ -132,6 +132,11 @@
 
       {# PAGE CONTENT #}
       <div class="wy-nav-content">
+        <div class="header-override">
+          <p>
+            <a href="http://moveit.ros.org">MoveIt! Website</a><br/>
+          </p>
+        </div>
         <div class="rst-content">
           {% include "breadcrumbs.html" %}
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
