Removed exclamation marks

--- a/_themes/sphinx_rtd_theme/layout.html
+++ b/_themes/sphinx_rtd_theme/layout.html
@@ -134,7 +134,7 @@
       <div class="wy-nav-content">
         <div class="header-override">
           <p>
-            <a href="http://moveit.ros.org">MoveIt! Website</a><br/>
+            <a href="http://moveit.ros.org">MoveIt Website</a><br/>
           </p>
         </div>
         <div class="rst-content">
