Better interlink MoveIt and Tutorials websites (#344)
- MoveIt logo returns to MoveIt main site
- Breadcrumbs include MoveIt main site
- Remove explicit MoveIt website link
- Search docs -> Search tutorials

--- a/_themes/sphinx_rtd_theme/breadcrumbs.html
+++ b/_themes/sphinx_rtd_theme/breadcrumbs.html
@@ -13,7 +13,8 @@
         {% endif %}
       {% endif %}
     </li>
-    <li><a href="{{ pathto(master_doc) }}">Docs</a> &raquo;</li>
+    <li><a href="http://moveit.ros.org">MoveIt</a> &raquo;</li>
+    <li><a href="{{ pathto(master_doc) }}">Tutorials</a> &raquo;</li>
       {% for doc in parents %}
           <li><a href="{{ doc.link|e }}">{{ doc.title }}</a> &raquo;</li>
       {% endfor %}
