--- a/_themes/sphinx_rtd_theme/layout.html
+++ b/_themes/sphinx_rtd_theme/layout.html
@@ -98,9 +98,8 @@
       <div class="wy-side-nav-search">
         {% block sidebartitle %}
 
-        <a href="{{ pathto(master_doc) }}">
+        <a href="http://moveit.ros.org">
           <img src="{{ pathto('_static/logo.png', 1) }}"/>
-          <span>Planning Framework</span>
         </a>
 
         {% include "searchbox.html" %}
@@ -132,11 +131,6 @@
 
       {# PAGE CONTENT #}
       <div class="wy-nav-content">
-        <div class="header-override">
-          <p>
-            <a href="http://moveit.ros.org">MoveIt Website</a><br/>
-          </p>
-        </div>
         <div class="rst-content">
           {% include "breadcrumbs.html" %}
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
