--- a/_themes/sphinx_rtd_theme/layout.html
+++ b/_themes/sphinx_rtd_theme/layout.html
@@ -100,9 +100,7 @@
 
         <a href="http://moveit.ros.org">
           <img src="{{ pathto('_static/logo.png', 1) }}"/>
-        </a>
-        <a href="{{ pathto(master_doc) }}">
-          <span class="icon icon-home"> MoveIt Tutorials</span>
+          <span>Planning Framework</span>
         </a>
 
         {% include "searchbox.html" %}
@@ -134,11 +132,6 @@
 
       {# PAGE CONTENT #}
       <div class="wy-nav-content">
-        <div class="header-override">
-          <p>
-            <a href="http://moveit.ros.org">MoveIt! Website</a><br/>
-          </p>
-        </div>
         <div class="rst-content">
           {% include "breadcrumbs.html" %}
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
