--- a/_themes/sphinx_rtd_theme/layout.html
+++ b/_themes/sphinx_rtd_theme/layout.html
@@ -101,7 +101,18 @@
         <a href="http://moveit.ros.org">
           <img src="{{ pathto('_static/logo.png', 1) }}"/>
         </a>
-
+        
+        <div class="version">
+          <div class="version-dropdown">
+            <lable for="version-list">Version:</lable>
+          <select class="version-list" id="version-list" onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
+              <option value=''>{{ version }}</option>
+              <option value="http://docs.ros.org/en/melodic/api/moveit_tutorials/html/index.html">Melodic</option>
+              <option value="http://docs.ros.org/en/kinetic/api/moveit_tutorials/html/index.html">Kinetic</option>
+              <option value="http://docs.ros.org/en/indigo/api/moveit_tutorials/html/index.html">Indigo (EOL)</option>
+          </select>
+          </div>
+        </div><br>
         {% include "searchbox.html" %}
 
         {% endblock %}
@@ -153,12 +164,9 @@
       </div>
 
     </section>
-
   </div>
-  {% include "versions.html" %}
-
+  
   {% if not embedded %}
-
     <script type="text/javascript">
         var DOCUMENTATION_OPTIONS = {
             URL_ROOT:'{{ url_root }}',
