--- a/_themes/sphinx_rtd_theme/breadcrumbs.html
+++ b/_themes/sphinx_rtd_theme/breadcrumbs.html
@@ -20,6 +20,8 @@
       {% endfor %}
     <li>{{ title }}</li>
   </ul>
-  {% include "moveit_version.html" %}
+  {% if meta is defined and 'moveit1' in meta.viewkeys() %}
+        {% include "moveit1_warning.html" %}
+  {% endif %}
   <hr/>
 </div>
