move version dropdown to seperate file and add Foxy

--- a/_themes/sphinx_rtd_theme/layout.html
+++ b/_themes/sphinx_rtd_theme/layout.html
@@ -112,6 +112,7 @@
         {% endif %}
         </a>
 
+        {% include "version_dropdown.html" %}
         {% include "searchbox.html" %}
 
         {% endblock %}
