--- a/_themes/sphinx_rtd_theme/layout.html
+++ b/_themes/sphinx_rtd_theme/layout.html
@@ -104,7 +104,7 @@
           <a href="{{ pathto(master_doc) }}" class="icon icon-home">
         {% endif %}
 
-          MoveIt! Motion<br/>Planning Framework
+          MoveIt Motion<br/>Planning Framework
 
         {% if logo %}
           {# Not strictly valid HTML, but it's the only way to display/scale it properly, without weird scripting or heaps of work #}
@@ -145,7 +145,7 @@
 
         <div class="header-override">
           <p>
-            <a href="http://moveit.ros.org">MoveIt! Website</a><br/>
+            <a href="http://moveit.ros.org">MoveIt Website</a><br/>
             <a href="http://moveit.ros.org/blog">Blog</a>
           </p>
           <a href="http://moveit.ros.org">
