--- a/_themes/sphinx_rtd_theme/version_dropdown.html
+++ b/_themes/sphinx_rtd_theme/version_dropdown.html
@@ -2,7 +2,7 @@
     <div class="version-dropdown">
         <lable for="version-list">Version:</lable>
     <select class="version-list" id="version-list" onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
-        <option value="http://moveit2_tutorials.picknik.ai">Moveit 2 - Foxy</option>
+        <option value="http://moveit.picknik.ai">Moveit 2 - Foxy</option>
         <option value='' selected>MoveIt 1 - {{ version }}</option>
         <option value="http://docs.ros.org/en/melodic/api/moveit_tutorials/html/index.html">MoveIt 1 - Melodic</option>
     </select>
