--- a/_themes/sphinx_rtd_theme/version_dropdown.html
+++ b/_themes/sphinx_rtd_theme/version_dropdown.html
@@ -2,7 +2,8 @@
     <div class="version-dropdown">
         <lable for="version-list">Version:</lable>
     <select class="version-list" id="version-list" onchange="this.options[this.selectedIndex].value && (window.location = this.options[this.selectedIndex].value);">
-        <option value="http://moveit2_tutorials.picknik.ai">Moveit 2 - Foxy</option>
+        <option value="https://moveit.picknik.ai/humble/index.html">Moveit 2 - Humble</option>
+        <option value="https://moveit.picknik.ai/main/index.html">Moveit 2 - Rolling</option>
         <option value="http://ros-planning.github.io/moveit_tutorials/">MoveIt 1 - Noetic</option>
         <option value="" selected>MoveIt 1 - Melodic</option>
     </select>
