Updated link to Noetic tutorial

--- a/_themes/sphinx_rtd_theme/versions.html
+++ b/_themes/sphinx_rtd_theme/versions.html
@@ -9,7 +9,7 @@
     <div class="rst-other-versions">
       <dl>
         <dt>Current Versions</dt>
-        <dd><a href="https://ros-planning.github.io/moveit_tutorials/">Noetic</a></dd>
+        <dd><a href="https://moveit.github.io/moveit_tutorials/">Noetic</a></dd>
         <dd><a href="http://docs.ros.org/en/melodic/api/moveit_tutorials/html/index.html">Melodic</a></dd>
               </dl>
       <dl>
