Replace all moveit.ros.org to moveit.ai

--- a/_themes/sphinx_rtd_theme/layout.html
+++ b/_themes/sphinx_rtd_theme/layout.html
@@ -98,7 +98,7 @@
       <div class="wy-side-nav-search">
         {% block sidebartitle %}
 
-        <a href="http://moveit.ros.org">
+        <a href="http://moveit.ai">
           <img src="{{ pathto('_static/logo.png', 1) }}"/>
         </a>
 
