Replace all moveit.ros.org to moveit.ai

--- a/_themes/sphinx_rtd_theme/layout.html
+++ b/_themes/sphinx_rtd_theme/layout.html
@@ -134,10 +134,10 @@
 
         <div class="header-override">
           <p>
-            <a href="http://moveit.ros.org">MoveIt! Website</a><br/>
-            <a href="http://moveit.ros.org/blog">Blog</a>
+            <a href="http://moveit.ai">MoveIt! Website</a><br/>
+            <a href="http://moveit.ai/blog">Blog</a>
           </p>
-          <a href="http://moveit.ros.org">
+          <a href="http://moveit.ai">
             <img src="{{ pathto('_static/logo.png', 1) }}"/>
           </a>
         </div>
